--- a/app/src/main/res/layout/activity_editar_reporte.xml
+++ b/app/src/main/res/layout/activity_editar_reporte.xml
@@ -169,7 +169,7 @@
                     android:background="@drawable/custom_edittext"
                     android:drawableLeft="@drawable/colonia"
                     android:drawablePadding="5dp"
-                    android:inputType="text"
+                    android:inputType="textCapCharacters"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/cardview_dark_background"
@@ -194,7 +194,7 @@
                     android:background="@drawable/custom_edittext"
                     android:drawableLeft="@drawable/direccion"
                     android:drawablePadding="5dp"
-                    android:inputType="text"
+                    android:inputType="textCapCharacters"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/cardview_dark_background"
@@ -217,7 +217,7 @@
                     android:background="@drawable/custom_edittext"
                     android:drawableLeft="@drawable/tipo_suelo"
                     android:drawablePadding="5dp"
-                    android:inputType="text"
+                    android:inputType="textCapCharacters"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/cardview_dark_background"
@@ -241,7 +241,7 @@
                     android:background="@drawable/custom_edittext"
                     android:drawableLeft="@drawable/baseline_person_24"
                     android:drawablePadding="5dp"
-                    android:inputType="text"
+                    android:inputType="textCapCharacters"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/cardview_dark_background"
@@ -289,7 +289,7 @@
                     android:background="@drawable/custom_edittext"
                     android:drawableLeft="@drawable/baseline_person_24"
                     android:drawablePadding="5dp"
-                    android:inputType="text"
+                    android:inputType="textCapCharacters"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/cardview_dark_background"
@@ -314,7 +314,7 @@
                     android:drawableLeft="@drawable/herrmienta"
                     android:drawablePadding="8dp"
                     android:gravity="top|start"
-                    android:inputType="textMultiLine"
+                    android:inputType="textMultiLine|textCapCharacters"
                     android:overScrollMode="always"
                     android:padding="8dp"
                     android:scrollbars="vertical"
