--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -119,7 +119,7 @@
                 android:id="@+id/footer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Aplicación de Reportes"
+                android:text="REPORTES"
                 android:textColor="@android:color/white"
                 android:layout_gravity="center"
                 android:textSize="16sp"
