--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
     <LinearLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@drawable/login"
-        tools:context=".LoginActivity">
+        tools:context=".Registro_Activity">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageView"
             android:layout_width="200dp"
             android:layout_height="250dp"
             android:layout_margin="20dp"
@@ -43,14 +43,14 @@
                     android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="INICIO DE SESION"
+                    android:text="REGISTRO"
                     android:textAlignment="center"
                     android:textColor="#070707"
-                    android:textSize="34dp"
+                    android:textSize="34sp"
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/txtusuario"
+                    android:id="@+id/txtnombreusuario"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="40dp"
@@ -58,10 +58,24 @@
                     android:drawableLeft="@drawable/baseline_person_24"
                     android:drawablePadding="12dp"
                     android:ems="10"
-                    android:hint="USUARIO"
+                    android:hint="NOMBRE DE USUARIO"
                     android:inputType="text"
                     android:textColor="@color/black"
                     android:textColorHint="@color/cardview_dark_background" />
+
+                <EditText
+                    android:id="@+id/txt_idempleado"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/custom_edittext"
+                    android:drawableLeft="@drawable/number"
+                android:drawablePadding="12dp"
+                android:ems="10"
+                android:hint="NUMERO DE EMPLEADO"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black"
+                android:textColorHint="@color/cardview_dark_background" />
 
                 <EditText
                     android:id="@+id/txtclave"
@@ -78,34 +92,12 @@
                     android:textColorHint="@color/cardview_dark_background" />
 
                 <Button
-                    android:id="@+id/btningresar"
+                    android:id="@+id/btnregistrar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:backgroundTint="@color/material_dynamic_primary60"
-                    android:text="INICIAR SESION"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"
-                    app:cornerRadius="20dp" />
-
-                <TextView
-                    android:id="@+id/txt_registro"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="¿NO CUENTAS CON UN USUARIO? REGISTRATE"
-                    android:textAlignment="center"
-                    android:textColor="#070707"
-                    android:textSize="14dp"
-                    android:textStyle="normal"
-                    tools:ignore="TextSizeCheck"
-                    android:layout_marginTop="20dp"/>
-                <Button
-                    android:id="@+id/btnregistrarme"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:backgroundTint="@color/material_dynamic_primary60"
-                    android:text="REGISTRARME"
+                    android:text="REGISTRAR"
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     app:cornerRadius="20dp" />
