BOTON DE SINCRONIZAR EN CURSO

--- a/app/src/main/res/layout/activity_editar_reporte.xml
+++ b/app/src/main/res/layout/activity_editar_reporte.xml
@@ -393,7 +393,7 @@
                     android:layout_marginTop="5dp"
                     android:backgroundTint="@color/material_dynamic_primary60"
                     android:minHeight="48dp"
-                    android:text="EDITAR"
+                    android:text="GUARDAR"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     app:cornerRadius="20dp"
