--- a/app/src/main/res/layout/sincronizar.xml
+++ b/app/src/main/res/layout/sincronizar.xml
@@ -109,7 +109,6 @@
                     android:padding="12dp"
                     android:layout_marginBottom="16dp"
                     android:scrollbars="vertical"
-                    android:dividerHeight="16dp"
                     android:layout_marginTop="16dp"
                     tools:listitem="@layout/reporte_item"/>
             </HorizontalScrollView>
@@ -128,6 +127,15 @@
                 android:elevation="4dp"
                 android:layout_marginTop="24dp"/>
 
+            <!-- ProgressBar -->
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+
             <!-- Footer actualizado -->
             <TextView
                 android:id="@+id/footer"
@@ -142,7 +150,7 @@
                 android:shadowRadius="3"
                 android:text="REPORTES"
                 android:textColor="@android:color/white"
-                android:textSize="16sp" />
+                android:textSize="16sp"/>
         </LinearLayout>
     </ScrollView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
