--- a/app/src/main/res/layout/activity_editar_reporte.xml
+++ b/app/src/main/res/layout/activity_editar_reporte.xml
@@ -73,6 +73,24 @@
                     android:textStyle="bold"
                     tools:ignore="HardcodedText" />
 
+                <TextView
+                    android:id="@+id/hintTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TIPO DE SERVICIO:"
+                    android:textColor="@color/black"
+                    android:visibility="visible"/>
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
+                    android:background="@drawable/custom_edittext"
+                    android:popupBackground="@color/blue"
+                    android:spinnerMode="dropdown"
+                    android:textColor="@color/black"/>
+
                 <!-- Etiqueta para el campo de Ticket -->
                 <TextView
                     android:layout_width="match_parent"
@@ -299,7 +317,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="MATERIAL"
+                    android:text="MATERIAL / DESCRIPCION"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:layout_marginTop="10dp"
